# freelance_test

./: BasicCPP.docx  CMakeLists.txt  README.md  example.txt.orig
include/: myfile.hpp  mymath.hpp
src/: CMakeLists.txt  myfile.cpp  mymath.cpp
test/: CMakeLists.txt  test_catch.cpp  test_google.cpp
